--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
   <head>
     <title>Fox University - Free Bootstrap 4 Template by Colorlib</title>
     <meta charset="utf-8">
@@ -102,17 +102,14 @@
 					</div>
 					<div class="col-md-7 wrap-about py-5 pr-md-4 ftco-animate">
           	<h2 class="mb-4">Triamudomsuksanomklao kabinburi </h2>
-						<p>		เนเธฃเธเน€เธฃเธตเธขเธเน€เธ•เธฃเธตเธขเธกเธญเธธเธ”เธกเธจเธถเธเธฉเธฒเธเนเธญเธกเน€เธเธฅเนเธฒ เธเธเธดเธเธ—เธฃเนเธเธธเธฃเธต   เธชเธฑเธเธเธฑเธ”เธญเธเธเนเธเธฒเธฃเธเธฃเธดเธซเธฒเธฃเธชเนเธงเธเธเธฑเธเธซเธงเธฑเธ”เธเธฃเธฒเธเธตเธเธเธธเธฃเธต เธ•เธฑเนเธเธญเธขเธนเนเน€เธฅเธเธ—เธตเน 560 เธซเธกเธนเน 9 เน€เธเธ•เธญเธธเธ•เธชเธฒเธซเธเธฃเธฃเธกเธเธเธดเธเธ—เธฃเนเธเธธเธฃเธต
-เธ–เธเธเธเธฐเน€เธเธดเธเน€เธ—เธฃเธฒ-เธเธเธฃเธฃเธฒเธเธชเธตเธกเธฒ เธ•เธณเธเธฅเธซเธเธญเธเธเธตเน เธญเธณเน€เธ เธญเธเธเธดเธเธ—เธฃเนเธเธธเธฃเธต เธเธฑเธเธซเธงเธฑเธ”เธเธฃเธฒเธเธตเธเธเธธเธฃเธต เธฃเธซเธฑเธชเนเธเธฃเธฉเธ“เธตเธขเน 25110 เนเธ—เธฃเธจเธฑเธเธ—เน 0-3745-5058 เนเธ—เธฃเธชเธฒเธฃ0-3745-5059.</p>
-						<p>เธเธฑเธ”เธเธฒเธฃเธจเธถเธเธฉเธฒเนเธเธฃเธฐเธ”เธฑเธเธเธฒเธฃเธจเธถเธเธฉเธฒเธเธฑเนเธเธเธทเนเธเธเธฒเธเน€เธเธดเธ”เธชเธญเธเธฃเธฐเธ”เธฑเธเธกเธฑเธเธขเธกเธจเธถเธเธฉเธฒเธ•เธญเธเธ•เนเธ เนเธฅเธฐเธกเธฑเธเธขเธกเธจเธถเธเธฉเธฒเธ•เธญเธเธเธฅเธฒเธข</p>
-						<p> เธ”เนเธงเธขเธเธฒเธขเธญเธธเธ”เธก เธเธฒเธ•เธดเธขเธฒเธเธเธ—เน เธเธฃเธฃเธกเธเธฒเธฃเธเธนเนเธเธฑเธ”เธเธฒเธฃเนเธซเธเนเธเธฃเธดเธฉเธฑเธ—เธเธฑเธเนเธขเธขเธนเธเธดเน€เธงเธญเธฃเนเนเธเธฅ เธญเธดเน€เธฅเนเธเธ—เธฃเธดเธ เธเธณเธเธฑเธ”(เธกเธซเธฒเธเธ)
-เธเธฒเธขเธเธชเธกเธฒเธเธกเธเธนเนเธเธเธเธฃเธญเธเนเธฅเธฐเธเธฃเธนเนเธฃเธเน€เธฃเธตเธขเธเน€เธ•เธฃเธตเธขเธกเธญเธธเธ”เธกเธจเธถเธเธฉเธฒเธเนเธญเธกเน€เธเธฅเนเธฒ เธเธถเนเธเธกเธญเธเธเธฒเธฃเธ“เนเนเธเธฅเนเธเธ”เนเธฒเธเธเธฒเธฃเธเธฑเธ”เธเธฒเธฃเธจเธถเธเธฉเธฒ
-เธเธถเธเน€เธชเธเธญเนเธซเนเธเธฃเธดเธฉเธฑเธ—เน€เธเธ•เธญเธธเธ•เธชเธฒเธซเธเธฃเธฃเธกเธเธเธดเธเธ—เธฃเนเธเธธเธฃเธต เธเธณเธเธฑเธ” เธเธถเนเธเธ•เธฑเนเธเธญเธขเธนเนเนเธเน€เธเธ•เธญเธธเธ•เธชเธฒเธซเธเธฃเธฃเธกเธเธเธดเธเธ—เธฃเนเธเธธเธฃเธต เธ•เธณเธเธฅเธซเธเธญเธเธเธตเน
-เธญเธณเน€เธ เธญเธเธเธดเธเธ—เธฃเนเธเธธเธฃเธต เธเธฑเธเธซเธงเธฑเธ”เธเธฃเธฒเธเธตเธเธเธธเธฃเธต เธเธฃเธดเธเธฒเธเธ—เธตเนเธ”เธดเธเนเธเน€เธเธ•เธญเธธเธ•เธชเธฒเธซเธเธฃเธฃเธก เธเธณเธเธงเธ 30 เนเธฃเน เน€เธเธทเนเธญเธเธฑเธ”เธชเธฃเนเธฒเธเนเธฃเธเน€เธฃเธตเธขเธเธกเธฑเธเธขเธกเธจเธถเธเธฉเธฒ เนเธ”เธขเธฃเธฐเธเธธเนเธซเนเน€เธเนเธเธชเธฒเธเธฒเธเธญเธเนเธฃเธเน€เธฃเธตเธขเธเน€เธ•เธฃเธตเธขเธกเธญเธธเธ”เธกเธจเธถเธเธฉเธฒเธเนเธญเธกเน€เธเธฅเนเธฒ เธ”เธฑเธเธเธฑเนเธเธเธฒเธขเน€เธเธ”เธดเธก เธชเธธเธงเธฃเธฃเธ“เนเธเธเธดเน
-เธเธถเนเธเน€เธเนเธเธเธนเนเธญเธณเธเธงเธขเธเธฒเธฃเนเธฃเธเน€เธฃเธตเธขเธเน€เธ•เธฃเธตเธขเธกเธญเธธเธ”เธกเธจเธถเธเธฉเธฒเธเนเธญเธกเนเธเธฅเนเธฒ เนเธเธเธ“เธฐเธเธฑเนเธเธเธถเธเนเธ”เนเธเธฃเธฐเธชเธฒเธเธเธฒเธเนเธเธขเธฑเธเธเธฃเธกเธชเธฒเธกเธฑเธเธจเธถเธเธฉเธฒ
-เน€เธเธทเนเธญเธเธญเธญเธเธธเธเธฒเธ•เธเธฑเธ”เธ•เธฑเนเธเนเธฃเธเน€เธฃเธตเธขเธเธชเธฒเธเธฒ เนเธ”เนเธฃเธฑเธเธเธงเธฒเธกเธฃเนเธงเธกเธกเธทเธญเนเธฅเธฐเธเนเธงเธขเน€เธซเธฅเธทเธญเน€เธฃเธทเนเธญเธเธเธฒเธฃเนเธซเนเธเนเธญเธกเธนเธฅเธ”เนเธฒเธเธ•เนเธฒเธเน เธเธฒเธ
-เธเธฒเธขเน€เธเธฃเธตเธขเธเธจเธฑเธเธ”เธดเน เธเธณเน€เธเธดเธ”เน€เธซเธกเธฒเธฐ  เธเธนเนเธญเธณเธเธงเธขเนเธฃเธเน€เธฃเธตเธขเธเน€เธ—เธเธจเธดเธฃเธดเธเธ—เธฃเนเธฃเนเธกเน€เธเธฅเนเธฒ เนเธฅเธฐเธเธฒเธขเธชเธเธฑเนเธ เธเธธเธเธเธฃเธธเธ‘ เธเธนเนเธเนเธงเธขเธเธนเนเธญเธณเธเธงเธขเธเธฒเธฃ
-เธชเธฒเธกเธฑเธเธจเธถเธเธฉเธฒเธเธฑเธเธซเธงเธฑเธ”เธเธฃเธฒเธเธตเธเธเธธเธฃเธต </p>
+						<p>	
+Triamudom Suksa Nom Klao School, Kabinburi, under the Prachinburi Provincial Administration Organization Located at 560 Moo 9, Kabinburi Industrial Zone
+Chachoengsao-Nakhon Ratchasima Road, Nongkee Subdistrict, Kabin Buri District Prachinburi Province Postal Code 25110 Phone 0-3745-5058 Fax 0-3745-5059	.</p>
+						<p>
+Providing education at the basic education level, opening at the lower secondary education level. And high school</p>
+						<p> 
+With Mr. Udom Chatiyanont, President of Sanyo Universal Electric Public Company Limited
+President of Parents and Teachers Association of Triam Udom Suksa School </p>
 					</div>
 				</div>
 			</div>
